# Pythagoras

./: .gitignore  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md  autonomy_model.md  contributing.md  design_principles.md  docstrings_and_comments.md  docstrings_comments.md  docstrings_comments_typehints.md  portal_architecture.md  pyproject.toml  roadmap.md  setup.py  type_hints.md  unit_tests.md
.github/workflows/: unit-tests.yml
pythagoras/: __init__.py
pythagoras/_010_basic_portals/: __init__.py  exceptions.py  portal_aware_classes.py  portal_aware_dict.py  portal_tester.py  portal_utils.py
pythagoras/_020_ordinary_code_portals/: __init__.py  code_normalizer.py  function_processing.py  ordinary_decorator.py  ordinary_portal_core_classes.py
pythagoras/_030_data_portals/: data_portal_core_classes.py
pythagoras/_040_logging_code_portals/: __init__.py  execution_environment_summary.py  kw_args.py  logging_decorator.py  logging_portal_core_classes.py  uncaught_exceptions.py
pythagoras/_050_safe_code_portals/: __init__.py  safe_decorator.py  safe_portal_core_classes.py
pythagoras/_060_autonomous_code_portals/: autonomous_decorators.py  autonomous_portal_core_classes.py  names_usage_analyzer.py
pythagoras/_070_protected_code_portals/: GPU_guards.py  OK_const.py  RAM_guards.py  __init__.py  fn_arg_names_checker.py  protected_decorators.py  protected_portal_core_classes.py  python_packages_guards.py
pythagoras/_080_pure_code_portals/: pure_core_classes.py  pure_decorator.py
pythagoras/_090_swarming_portals/: __init__.py  default_portal.py  swarming_portals.py
pythagoras/_800_persidict_extensions/: first_entry_dict.py  overlapping_multi_dict.py
pythagoras/_840_work_with_collections/: list_flattener.py
pythagoras/___OLD_autonomous/: autonomicity_checks.py  call_graph_explorer.py
src/pythagoras/: __init__.py  _version_info.py
tests/_000_foundational_utilities/: test_cacheable_properties_mixin_get_all.py  test_node_signature.py  test_random_signature.py  test_round_trip_conversions.py
tests/_000_simple_imports/: test_imports.py  test_version.py  test_version_fallback.py  test_version_old.py
tests/_000_supporting_utilities/: test_cacheable_properties_mixin_core.py  test_cacheable_properties_mixin_get_all.py  test_cacheable_properties_mixin_get_single.py  test_cacheable_properties_mixin_get_status.py  test_cacheable_properties_mixin_set.py  test_cacheable_properties_mixin_wrapping.py  test_current_date_gmt_str.py  test_long_infoname_robustness.py  test_node_signature.py  test_random_signature.py
tests/_010_basic_portals/: test_basic_portal.py  test_basic_portal_accessors.py  test_basic_portal_binding.py  test_basic_portal_get_params.py  test_basic_portal_linked_objects.py  test_basic_portal_not_picklable.py  test_basic_portal_parameterizable_smoketest.py  test_basic_portal_params.py  test_cacheable_properties_mixin.py  test_describe_basic_portal.py  test_exit_all_complex.py  test_exit_all_simple.py  test_get_portal.py  test_get_portal_by_fingerprint.py  test_guarded_init_metaclass.py  test_guarded_init_metaclass_helpers.py  test_link_to_portal.py  test_long_infoname.py  test_noncurrent_portals.py  test_not_picklable.py  test_portal_aware_class.py  test_portal_aware_metaclass.py  test_portal_default_args.py  test_portal_description_helpers.py  test_portal_filtering.py  test_portal_filtering_validation.py  test_portal_tester.py  test_post_init_metaclass.py  test_post_setstate.py  test_single_thread_enforcer.py  test_visit_portal.py
tests/_020_ordinary_code_portals/: test_assert_ordinarity.py  test_code_normalizer_helpers.py  test_count_parameters_with_defaults.py  test_describe_ordinary_portal.py  test_empty_ordinary_code_portal.py  test_function_code_normalization.py  test_function_name.py  test_get_linked_functions.py  test_long_infoname.py  test_long_infoname_robustness.py  test_ordinary_code_portal_parameterizable_smoketest.py  test_ordinary_decorator.py  test_ordinary_factorial.py  test_ordinary_fn_errors.py  test_ordinary_func.py  test_ordinary_odd_even.py  test_ordinary_portal_binding.py  test_ordinary_portal_not_picklable.py  test_ordinary_portal_params.py  test_positional_args_checker.py  test_self_inside_ordinary_function.py
tests/_030_data_portals/: test_data_portal_get_params.py  test_data_portal_not_picklable.py  test_data_portal_parameterizable_smoketest.py  test_data_portal_params.py  test_describe_data_portal.py  test_empty_data_portal.py  test_get.py  test_hash_addr_comprehensive.py  test_hash_address.py  test_portals.py  test_ready.py  test_save_load_storablefn.py  test_storable_fn_config.py  test_value_address.py  test_value_address_default_portal.py
tests/_040_logging_code_portals/: test_2arg_function_logging.py  test_context_builder.py  test_describe_logging_portal.py  test_empty_logging_code_portal.py  test_exception_deduplication.py  test_exceptions_logging.py  test_execution_frame_edge_cases.py  test_execution_records_basic.py  test_fn_call_signature.py  test_kw_args.py  test_kw_args_type_invariants.py  test_kw_args_very_basic.py  test_log_functions.py  test_logging_code_portal_not_picklable.py  test_logging_code_portal_parameterizable_smoketest.py  test_logging_configuration.py  test_logging_factorial.py  test_logging_odd_even.py  test_logging_portal_basic.py  test_logging_portal_binding.py  test_logging_portal_params.py  test_notebook_checker.py  test_output_capturer.py  test_simple_function_logging.py  test_uncaught_exceptions.py  test_unique_name_maker.py  test_value_addr_for_fn_call_signature.py  test_value_addr_for_logging_fn.py
(+901 files in other folders)
