[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pythagoras"
version = "0.23.12"
authors = [
    {name = "Volodymyr (Vlad) Pavlov", email = "vlpavlov@ieee.org"},
]
description = "Planet-scale distributed computing in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["cloud", "ML", "AI", "serverless", "distributed", "parallel", "machine-learning", "deep-learning", "pythagoras"]
dependencies = [
    "parameterizable",
    "persidict",
    "lz4",
    "joblib",
    "scikit-learn",
    "pandas",
    "jsonpickle",
    "psutil",
    "autopep8",
    "deepdiff",
    "numpy",
    "pytest",
    "boto3",
    "moto",
    "uv",
    "nvidia-ml-py",
]

[project.urls]
"Homepage" = "https://github.com/pythagoras-dev/pythagoras"

[project.optional-dependencies]
dev = [
    "persidict[dev]",
    "numpy",
    "scipy",
    "torch",
    "keras",
    "tensorflow",
    "boto3",
    "moto",
    "pytest"
]

aws = [
    "persidict[aws]"
    ,"boto3"
    ,"moto"
]
