[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythagoras"
version = "0.49.0"
authors = [
    {name = "Volodymyr (Vlad) Pavlov", email = "vlpavlov@ieee.org"},
]
description = "Planet-scale distributed computing in Python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
keywords = ["cloud", "ML", "AI", "serverless", "distributed", "parallel", "machine-learning", "deep-learning", "pythagoras"]
dependencies = [
    "lz4",
    "joblib",
    "scikit-learn",
    "pandas",
    "jsonpickle",
    "psutil",
    "autopep8",
    "deepdiff",
    "numpy",
    "persidict",
    "boto3",
    "uv",
    "mixinforge"
]

[project.urls]
"Homepage" = "https://github.com/pythagoras-dev/pythagoras"

[project.optional-dependencies]
dev = [
    "persidict[dev]",
    "numpy",
    "scipy",
    "keras",
    "boto3",
    "moto",
    "pytest",
    "uv-publish",
    "ruff",
    "coverage"
]

aws = [
    "persidict[aws]"
    ,"boto3"
    ,"moto"
]

nvidia = [
    "nvidia-ml-py"
]

[tool.pytest.ini_options]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Raise error on unknown markers
    "--strict-config",        # Raise error on config issues
    "--showlocals",           # Show local variables in tracebacks
    "--verbose",              # Verbose output
    "--cache-clear",          # Clear cache before each run
]

testpaths = ["tests"]
python_files = ["test_*.py", "*_action.py"]
markers = [
    """live_actions: marks tests as live actions that operate on the actual project (deselect with '-m \"not live_actions\"')""",
]

[tool.coverage.run]
source = ["src/persidict"]
branch = true

[tool.ruff]
lint.ignore = ["F403", "F405"]
